[package]
name = "pass-cookie-report-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "net", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
urlencoding = "2.1.3"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
rand = "0.8"
dotenv = "0.15"
