[package]
name = "pass-cookie-report-rust"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
urlencoding = "2.1"
rand = "0.8"
scraper = "0.20"
chrono = "0.4"

[[bin]]
name = "pass-cookie-report-rust"
path = "src/main.rs"